<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv_show_activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_activity2"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_back3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_title3"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_title"/>

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_btn_title2"/>

</LinearLayout>